tests/paczka1/small_fuzzy/63852319.err
Error in line 1: PWAjq3 A761 85,1
Error in line 6: LxXpRN A447 72,6
Error in line 10: VhhpRDH2L A470 -1,0
